--- a/docs/ADMINISTRATION/命令.md
+++ b/docs/ADMINISTRATION/命令.md
@@ -26,11 +26,15 @@ sidebar_position: 1
 
 打开那个菜单需要权限 `chestcommands.open.<file>.yml`
 
-> 此命令仅适用于管理员。
->
-> 如果你想允许玩家打开菜单，请修改菜单设置中的可自定义命令，并给予他们正确的权限
->
-> 如果要在另一个菜单中打开一个菜单，请使用打开单击操作
+:::warning
+
+此命令仅适用于管理员。
+
+如果你想允许玩家打开菜单，请修改菜单设置中的可自定义命令，并给予他们正确的权限
+
+如果要在另一个菜单中打开一个菜单，请使用打开单击操作
+
+:::
 
 打开另一个玩家的菜单 访问此命令还可以授予打开所有菜单的权限 ?
 
