--- a/docs/ADVANCED/自定义占位符.md
+++ b/docs/ADVANCED/自定义占位符.md
@@ -8,7 +8,7 @@ sidebar_position: 4
 
 他们可以用在 [物品属性](/docs/BASICS/物品属性.md):
 
-- `ACTIONSs`
+- `ACTIONS`
 - `NAME`
 - `LORE`
 - `SKULL-OWNER`
@@ -23,12 +23,12 @@ sidebar_position: 4
 
 2. 添加 `'placeholder': 'replacement'`(应保留单引号)
 
-3. 使用/cc Reload重载插件
+3. 使用 /cc Reload 重载插件
 
 您现在可以在菜单中使用自定义占位符，它将自动替换为您指定的值
 
 
-您可以在[unicode表](https://unicode-table.com)等网站上找到unicode符号
+您可以在[unicode表](https://unicode-table.com)等网站上找到 unicode 符号
 
 例子:
 ```
