--- a/docs/ADVANCED/颜色.md
+++ b/docs/ADVANCED/颜色.md
@@ -8,7 +8,11 @@ sidebar_position: 1
 
 ## RGB颜色
 
-> 自定义颜色仅适用于Spigot 1.16或更高版本，并且只有客户端在Minecraft 1.16或更高版本上才能正确显示
+:::warning
+
+自定义颜色仅适用于 Spigot 1.16 或更高版本，并且只有客户端在 Minecraft 1.16 或更高版本上才能正确显示
+
+:::
 
 使用十六进制颜色格式显示自定义颜色：`&#<HEX color>`。HEX颜色必须恰好由6个十六进制字符组成（0123456789abdedf，不区分大小写）。
 
