--- a/docs/BASICS/点击动作.md
+++ b/docs/BASICS/点击动作.md
@@ -4,13 +4,17 @@ sidebar_position: 5
 
 # 点击动作
 
-当玩家点击 icon 时就会执行action，这些action是通过 `ACTION` 来配置的
+当玩家点击 icon 时就会执行动作，这些动作是通过 `ACTION` 来配置的
 
 这里有许多不同类型的前缀来供你选择 不同的前缀是不同的功能
 
-> ACTION 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/BASICS/占位符.md)
+:::warning
 
-如果某个action打开了另一个箱子菜单或外部插件的GUI，请设置 `KEEP-OPEN:true`
+ACTION 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/BASICS/占位符.md)
+
+:::
+
+如果某个动作打开了另一个箱子菜单或外部插件的GUI，请设置 `KEEP-OPEN:true`
 
 ## `Command as player` (默认)
 
