--- a/docs/BASICS/物品属性.md
+++ b/docs/BASICS/物品属性.md
@@ -19,7 +19,11 @@ sidebar_position: 4
 
 你可以将 material 设置为 `air` 来做空格子，因为它依旧可以被点击
 
-> 插件的MATERIAL名称与原版的不同
+:::warning
+
+插件的 MATERIAL 名称与原版的不同
+
+:::
 
 每个版本的有效material列表 (不要使用前缀为LEGACY_的material)：
 
@@ -198,7 +202,11 @@ SKULL-OWNER: '{player}'
 
 设置旗帜的颜色。值必须是燃料颜色([list of valid dye colors](https://hub.spigotmc.org/javadocs/spigot/org/bukkit/DyeColor.html))
 
-> 该属性仅适用于Minecraft 1.12及更早版本，当时没有为每个旗帜颜色单独的材质。
+:::info
+
+该属性仅适用于Minecraft 1.12及更早版本，当时没有为每个旗帜颜色单独的材质。
+
+:::
 
 Example (icon 必须是旗帜):
 ```
