--- a/docs/BASICS/菜单.md
+++ b/docs/BASICS/菜单.md
@@ -6,15 +6,19 @@ sidebar_position: 3
 
 菜单是位于 `/plugins/ChestCommands/menu` 文件夹中的 `.yml` 后缀的文件
 
-> 文件名也会被用来检查权限
+:::danger
 
-创建新菜单的一个简单方法是Ctrl CV现有的菜单模板，重命名文件并编辑其内容。建议使用有语法高亮的文本编辑器(如Sublime text或Notepad++)。
+文件名也会被用来检查权限
+
+:::
+
+创建新菜单的最简单方法是 Ctrl+CV 现有的菜单模板，重命名文件并编辑其内容。建议使用有语法高亮的文本编辑器(如Sublime text或Notepad++)。
 
 ---
 
-Notepad++作者台独，多次辱H
+Notepad++ 作者台独，多次辱H
 
-如果你需要了解更多或安装一个文本编辑器 可见于 [此处](https://postyizhan.github.io/Dumb_Service_Guide/%E5%87%86%E5%A4%87%E5%B7%A5%E4%BD%9C/%E6%96%87%E6%9C%AC%E7%BC%96%E8%BE%91%E5%99%A8)
+如果你需要了解更多或安装一个文本编辑器 可见于 [此处](https://nitwikit.yizhan.wiki/preparation/text-editor)
 
 ---
 
@@ -44,8 +48,11 @@ menu-settings:
 
 ## Options explanation
 
-> 您可以删除下方任何未标记为 “Required” 的选项来禁用它
+:::info
 
+您可以删除下方任何未标记为 “Required” 的选项来禁用它
+
+:::
 
 | Option | 数据类型 | 描述 |
 | ----------- | ----------- | ----------- |
@@ -72,8 +79,12 @@ spawn-teleport:
 ```
 在上面的例子中，`spawn-teleport`是内部名称
 
-> 内部名称在YAML文件中必须是唯一的，否则不会加载具有相同名称的图标。
->
-> 不要在内部名称中使用符号，因为它需要是有效的 YAML key
+:::danger
+
+内部名称在YAML文件中必须是唯一的，插件不会加载具有相同名称的图标。
+
+不要在内部名称中使用符号，因为它必须是有效的 YAML key
+
+:::
 
 icons 可以配置 [物品属性](/docs/BASICS/物品属性.md)
