--- a/docs/BASICS/安装.md
+++ b/docs/BASICS/安装.md
@@ -4,7 +4,11 @@ sidebar_position: 2
 
 # 安装
 
-> 安装 chestcommands 的步骤与任何其他 Bukkit插件相同，如下.
+:::info
+
+安装 chestcommands 的步骤与任何其他 Bukkit插件相同，如下.
+
+:::
 
 1. 从 Bukkit Dev 下载 [latest version](https://dev.bukkit.org/projects/chest-commands/files) 1.7.10用[3.3.1](https://dev.bukkit.org/projects/chest-commands/files/2977162)
 2. 将下载下来的 JAR 文件放到 `/plugins` 目录
@@ -14,7 +18,7 @@ sidebar_position: 2
 
 ## 经济
 
-chestcommands 支持经济，并且需要有效的经济设置。您必须已安装：
+ChestCommands 支持经济，并且需要有效的经济设置。您必须已安装：
 
 - Vault（最新版本）
 - 与Vault兼容的经济型插件(如EssentialsX)
