--- a/docs/ADMINISTRATION/权限.md
+++ b/docs/ADMINISTRATION/权限.md
@@ -4,21 +4,21 @@ sidebar_position: 2
 
 # 权限
 
-> 单物品权限看 `PERMISSION` 属性
+\> 单物品权限看 `PERMISSION` 属性
 
 ## 玩家权限
 
-| 权限 | 描述 |
-| ----------- | ----------- |
-| chestcommands.open.<文件>.yml | 菜单打开权限，文件名不能包含空格 |
+| 权限                            | 描述 |
+|-------------------------------| ----------- |
+| chestcommands.open.\<文件\>.yml | 菜单打开权限，文件名不能包含空格 |
 
 ## 管理员权限
 
 | 权限 | 描述 |
 | ----------- | ----------- |
 |chestcommands.command.help | /cc help |
-|chestcommands.command.open | /cc open <文件> |
-|chestcommands.command.open.others | /cc open <文件> [player] Note: 该权限还授予打开所有菜单的权限 |
+|chestcommands.command.open | /cc open \<文件\> |
+|chestcommands.command.open.others | /cc open \<文件\> [player] Note: 该权限还授予打开所有菜单的权限 |
 |chestcommands.command.list | /cc list |
 |chestcommands.command.reload | /cc reload |
 
