--- a/docs/BASICS/占位符.md
+++ b/docs/BASICS/占位符.md
@@ -13,14 +13,14 @@ sidebar_position: 6
 
 占位符标:
 
-| 占位符 | 描述 |
-| ----------- | ----------- |
-| {player} | 玩家名 |
-| {money} | 玩家的钱 |
-| {world} | 玩家所处世界 |
-| {online} | 服务器在线人数 |
-| {max_players} | 最大在线人数 |
+| 占位符          | 描述      |
+|--------------|---------|
+| \{player\}    | 玩家名     |
+| \{money\}     | 玩家的钱    |
+| \{world\}     | 玩家所处世界  |
+| \{online\}    | 服务器在线人数 |
+| \{max_players\} | 最大在线人数  |
 
 使用 PlaceHolderAPI 提供的占位符
 
-**Note**:必须要带百分号 如 %player_gamemode%
+**Note**:必须要带百分号 如 `%player_gamemode%`
