--- a/docs/BASICS/菜单.md
+++ b/docs/BASICS/菜单.md
@@ -54,14 +54,15 @@ menu-settings:
 
 :::
 
-| Option | 数据类型 | 描述 |
-| ----------- | ----------- | ----------- |
-| name (Required) | string | 打开菜单显示的名称，作为容器标题。长度不能超过32个字符(包括颜色) |
-| row | integer | 菜单行数(1-6) 更高无法显示 |
-| commands | list | 设置打开此菜单的命令 |
-| auto-refresh | decimal | papi刷新频率 **Note**: {money}占位符 会在cc执行相关交易后自动刷新 |
-| open-actions | list | 菜单打开执行的操作，支持在 icons 中使用的所有单击操作 |
-| open-with-item | boolean | 使用指定的物品打开菜单
+| Option          | 数据类型    | 描述                                            |
+|-----------------|---------|-----------------------------------------------|
+| name (Required) | string  | 打开菜单显示的名称，作为容器标题。长度不能超过32个字符(包括颜色)            |
+| row             | integer | 菜单行数(1-6) 更高无法显示                              |
+| commands        | list    | 设置打开此菜单的命令                                    |
+| auto-refresh    | decimal | papi刷新频率 **Note**: \{money\}占位符 会在cc执行相关交易后自动刷新 |
+| open-actions    | list    | 菜单打开执行的操作，支持在 icons 中使用的所有单击操作                |
+| open-with-item  | boolean | 使用指定的物品打开菜单                                   |
+
 - material
 - left-click
 - right-click
