--- a/docs/基础/点击动作.md
+++ b/docs/基础/点击动作.md
@@ -10,7 +10,7 @@ sidebar_position: 5
 
 :::warning
 
-ACTION 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/BASICS/占位符.md)
+ACTION 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/基础/占位符.md)
 
 :::
 
@@ -56,7 +56,7 @@ ACTIONS:
 
 ## `打开其他菜单`
 
-打开其他菜单 需要特定[权限](/docs/ADMINISTRATION/权限.md)
+打开其他菜单 需要特定[权限](/docs/服主/权限.md)
 
 格式: `open: <file>`
 
@@ -118,7 +118,7 @@ ACTIONS:
 
 ## `给钱`
 
-给钱 得设置 [经济](/docs/BASICS/安装.md)
+给钱 得设置 [经济](/docs/基础/安装.md)
 
 格式: `give-money: <amount>`
 
