--- a/docs/高级/自定义占位符.md
+++ b/docs/高级/自定义占位符.md
@@ -6,7 +6,7 @@ sidebar_position: 4
 
 将一些静态文本做成自定义占位符
 
-他们可以用在 [物品属性](/docs/BASICS/物品属性.md):
+他们可以用在 [物品属性](/docs/基础/物品属性.md):
 
 - `ACTIONS`
 - `NAME`
