--- a/docs/基础/物品属性.md
+++ b/docs/基础/物品属性.md
@@ -68,7 +68,7 @@ POSITION-Y: 1
 
 玩家点击后执行动作的列表，像例子这样没有前缀就是直接执行命令
 
-更多的动作见 [点击动作](/docs/BASICS/点击动作.md)
+更多的动作见 [点击动作](/docs/基础/点击动作.md)
 
 例子:
 ```
@@ -80,7 +80,7 @@ ACTIONS:
 
 数据类型: string
 
-物品名称 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/BASICS/占位符.md)
+物品名称 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/基础/占位符.md)
 
 例子:
 ```
@@ -91,7 +91,7 @@ NAME: '&6This is a colored name!'
 
 数据类型: list
 
-物品lore 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/BASICS/占位符.md)
+物品lore 可以使用颜色、[symbols](/docs/symbols.md)和[占位符](/docs/基础/占位符.md)
 
 例子:
 ```
@@ -238,7 +238,7 @@ BANNER-PATTERNS:
 
 执行此icon的点击动作需要的money
 
-需要配置 [经济](/docs/BASICS/安装.md)
+需要配置 [经济](/docs/基础/安装.md)
 
 例子:
 ```
